# docforge

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  SOURCE_OF_TRUTH.md  docker-compose.prod.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema_with_stage_3_columns.py  0002_widen_status_column.py
backend/app/: main.py
backend/app/api/: deps.py  documents.py  health.py  router.py  schemas.py
backend/app/core/: config.py  database.py  llm.py  redis.py  security.py
backend/app/models/: db.py  schemas.py
backend/app/services/: document.py  extraction.py
backend/app/workflows/: graph.py  nodes.py  playbooks.py  state.py
backend/tests/: conftest.py  test_api.py  test_llm.py  test_models.py  test_nodes.py  test_playbooks.py  test_stage3.py  test_workflow.py
docs/: WORKFLOW.md
docs/superpowers/plans/: 2026-03-19-pdf-parser-and-model-id-fixes.md
docs/superpowers/specs/: 2026-03-19-pdf-parser-and-model-id-fixes-design.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: ApiKeyInput.tsx  DocumentUpload.tsx  ExtractionProgress.tsx  FieldLabel.tsx  Layout.tsx  ModelSelector.tsx  ResultsViewer.tsx  SchemaSelector.tsx
frontend/src/hooks/: useSSE.test.ts  useSSE.ts
frontend/src/lib/: highlightJson.tsx
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
