[project]
name = "docforge"
version = "0.1.0"
description = "AI-powered document intelligence API"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Data
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",

    # AI / LLM
    "langgraph>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",

    # Validation & Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Document Processing
    "pypdf>=4.0.0",
    "python-docx>=1.0.0",

    # Utilities
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "pyright>=1.1.380",
    "pre-commit>=3.8.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # B008: FastAPI uses Depends() in function signatures by design

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
# langgraph / langchain ship no type stubs; suppress cascading unknown-type noise
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
