[project]
name = "docforge"
version = "0.1.0"
description = "AI-powered document intelligence API"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.137.1",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
    # Data
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    # AI / LLM
    "langgraph>=1.2.5",
    "langchain>=0.3.0",
    "langchain-anthropic>=1.4.6",
    "langchain-google-genai>=4.2.5",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    # Validation & Config
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    # Document Processing
    "pymupdf4llm>=0.0.17",
    "python-docx>=1.0.0",
    # Utilities
    "httpx>=0.27.0",
    "sse-starlette>=3.4.4",
    "langchain-openrouter>=0.2.3",
    "jsonschema>=4.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.27.0",
    "ruff>=0.15.17",
    "pyright>=1.1.410",
    "pre-commit>=4.6.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # B008: FastAPI uses Depends() in function signatures by design

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
# langgraph / langchain ship no type stubs; suppress cascading unknown-type noise
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
