[project]
name = "docforge"
version = "0.1.0"
description = "AI-powered document intelligence API"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
    # Data
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.29.0",
    "alembic>=1.18.5",
    "redis>=8.0.1",
    # AI / LLM
    "langgraph>=1.2.6",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-community>=0.4.2",
    "langchain-text-splitters>=1.1.2",
    # Validation & Config
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    # Document Processing
    "pymupdf4llm>=1.28.0",
    "python-docx>=1.0.0",
    # Utilities
    "httpx>=0.27.0",
    "sse-starlette>=3.4.5",
    "langchain-openrouter>=0.2.4",
    "jsonschema>=4.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.27.0",
    "ruff>=0.15.20",
    "pyright>=1.1.411",
    "pre-commit>=4.6.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # B008: FastAPI uses Depends() in function signatures by design

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
# langgraph / langchain ship no type stubs; suppress cascading unknown-type noise
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
